@@ -16,6 +16,7 @@ o syslog support (based on patch from Simon Lodal)
 o add CacheWriteThrough clause: external cache write through policy
 o add support for secmark (requires Linux kernel >= 2.6.25)
 o add conntrackd (8) manpage
+o raise ignorepool maximum limit from 1024 to INT_MAX
 
 version 0.9.5 (2007/07/29)
 ------------------------------
